--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -266,4 +266,8 @@
       }
     }
   }
+
+  .hover {
+    display: block;
+  }
 }
